# ai-tutorial

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  pre-commit.yml  zizmor.yml
docs/: conf.py  day1.rst  day2.rst  day3.rst  day4.rst  index.rst
docs/1intro/: 01_async_session.ipynb  02_async_session.ipynb  case-study.ipynb  categories.rst  customer-churn.ipynb  def.rst  evaluation.rst  extra.rst  index.rst  linear-regression.rst  ml-concepts.rst  nachtrag_ensembleML.rst  training-modelling.rst  usecase-pitfalls.rst
docs/1intro/data/: X_train.csv  X_train_scaled.csv  X_val.csv  X_val_scaled.csv  customers.csv  feature_columns.csv  final_dataset.csv  standard_scaler.joblib  transactions.csv  y_train.csv  y_val.csv
docs/2deep_ml_ops/: cnn-beispiel.ipynb  cnn-beispiel.rst  deduplicate.ipynb  index.rst  mlops.rst  modellverhalten.rst  neural-net-optimize.rst  neural-net.rst  usecase-pitfalls.rst
docs/3reinforce_learn/: def.rst  index.rst  kunden_service.csv  mdp.rst  qlearn.rst  reinforcement_robotgridexit.ipynb  resolve_merge_conflicts.py
docs/4gen_ai/: abschluss.rst  customer-churn-2.ipynb  customer-churn-data-creation.ipynb  embeddings.rst  genai_agents.rst  genai_infrastructure.rst  genai_intro.rst  genai_llm.rst  genai_roadmap.rst  genai_theory.rst  index.rst  kunden_service.csv  llm_1.ipynb  llm_2.ipynb  llm_internals.rst  llm_intuition.rst  llm_limitations.rst  microgpt-karpathy.ipynb  microgpt_walkthrough.rst  nachtrag_ensembleML.rst  prompt_engineering.rst  rag_intro.rst  rag_practice.ipynb  regulatory.rst  semantic_search.rst  semantic_similarity.rst  tokenization.rst
docs/day2/: index.rst  mlops.rst
docs/intro/: case-study.ipynb  case-study.rst  def.rst  evaluation.rst  extra.rst  index.rst  linear-regression.rst  ml-concepts.rst  reflection.rst  training-modelling.rst
docs/reinforce_learn/: def.rst  index.rst
