[project]
name = "ai-tutorial"
version = "24.1.0"
authors = [
  { name="Min Ye", email="minye.epfl@gmail.com" },
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Schulungsmaterialien für die Einführung in KI mit Python (ML, Deep Learning, Reinforcement Learning, Generative KI). Seminare: https://cusy.io/de/seminare"
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate>=1.1.0",
    "datasets",
    "dedupe",
    "jupyter",
    "kagglehub",
    "keras",
    "missingno",
    "numpy",
    "pandas",
    "plotly",
    "scikit-learn",
    "tensorflow",
    "torch",
    "transformers",
    "kagglehub",
    "plotly",
    "missingno"
]

[dependency-groups]
docs = [
    "sphinx>=8,<9",
    "furo",
    "ipython",
    "ipywidgets",
    "notebook",
    "nbsphinx",
    "sphinxext.opengraph", # matplotlib is required for social cards
    "matplotlib",
    "sphinx_copybutton",
    "sphinx-inline-tabs",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-lint",
    "pygments-pytest",
]

dev = [
    {include-group = "docs"},
    "pre-commit",
    "codespell",
]

[project.urls]
"Homepage" = "https://github.com/AInvone/Intro-in-KI-Schulung/"
"Bug Tracker" = "https://github.com/AInvone/Intro-in-KI-Schulung/issues"

[tool.codespell]
skip = "*.rst, *.svg"
