[project]
name = "ai-tutorial"
version = "24.1.0"
authors = [
  { name="Min Ye", email="minye.epfl@gmail.com" },
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Schulungsmaterialien für die Einführung in KI mit Python (ML, Deep Learning, Reinforcement Learning, Generative KI). Seminare: https://cusy.io/de/seminare"
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate",
    "datasets",
    "dedupe",
    "jupyter",
    "kagglehub",
    "keras",
    "missingno",
    "numpy",
    "pandas",
    "plotly",
    "scikit-learn",
    "shap",
    "tensorflow",
    "torch",
    "transformers",
    "plotly",
]

[dependency-groups]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "nbsphinx",
    "notebook",
    "pygments-pytest",
    "sentence-transformers",
    "sphinx_copybutton",
    "sphinx-inline-tabs",
    "sphinx-lint",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxext.opengraph", # matplotlib is required for social cards
]

dev = [
    {include-group = "docs"},
    "pre-commit",
    "codespell",
]

[project.urls]
"Homepage" = "https://github.com/AInvone/Intro-in-KI-Schulung/"
"Bug Tracker" = "https://github.com/AInvone/Intro-in-KI-Schulung/issues"

[tool.codespell]
skip = "*.rst, *.svg"
